game/style.css
/* ... */
.server:hover
{
    color: #ff7aef;
}
.server:active
{
    color: #000000;
}
.server div
{
    opacity: 0.4;
}

.r_container
{
    display: flex;
    align-items: center;
    justify-content: center;
    
    background-color:rgba(0,0,0,0);
    
    border-radius: 0.2cm;
    border: 2px inset #ffffff05;
    
    vertical-align: middle;
    
    box-sizing: border-box;

    pointer-events: none;
    color: #ffffff22;
    font-size: 0.5cm;

    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
		    supported by Chrome, Edge, Opera and Firefox */
}
.r_wsad
{
    border: 2px inset #ffffff20;
    color: #ffffff73;
}
.r_dimmed_bg
{
    background-color:rgba(0,0,0,0.8);
    color: #ffffff;
}
.r_held
{
    border: 2px inset #aaffaaaa;
    animation: held_ping 2s normal forwards ease-in-out;

}
@keyframes held_ping {
    from {
	border: 2px inset #aaffaaaa;
    }
    to {
	border: 2px inset #aaffaa10;
    }
}
#twitch_player_div, #youtube_player_div
{
    pointer-events: none;
    position: fixed;
    left: 0px;
    top: 0px;
    z-index: 100;
    display: none;
}



div.sd_overlay
{
    display: block;
    box-sizing: border-box;
    position: fixed;
    padding: 20px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: transparent;
}
div.sd_window
{
    display: block;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 10px;
    background-color: rgba(0,0,0,0.85);
    position: fixed;
}
div.sd_window_caption
{
    display: block;
    width: 100%;
    margin-bottom: 10px;
    color: white;
    box-sizing: border-box;
    padding: 10px;
    background-color: rgba(0,0,200,0.85);
}
div.sd_window_close_btn
{
    position: absolute;
    right: 17px;
    top: 17px;
    width: 20px;
    height: 20px;
    background-color:#aaaaaa;
    box-shadow: 1px 1px 0px #ffffff78 inset, -1px -1px 0px #00000054 inset;

    display: flex;
    align-content: stretch;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    line-height: 0;

    box-sizing: border-box;
}
div.sd_window_close_btn:hover
{
    background-color:#bbbbbb;
}
div.sd_window_close_btn:active
{
    background-color:#666666;
    box-shadow: -1px -1px 0px #00000054 inset, 1px 1px 0px #00000054 inset;

    padding-top: 1px;
}
div.sd_window_inner_container
{
    display: block;
    width: 100%;
    height: calc( 100% - 33px - 10px );
}
div.sd_text
{
    display: inline;
    color: white;
}
div.sd_text:focus-visible
{
    outline: none;
    border-radius: 1px;
    background-color: #4b4b4b;
    box-shadow: 0px 0px 0px 3px #4b4b4b;
    color: #ffffff !important;
    /*transform: scale(2,2) translate(5px, 0px);
    transform-origin: left center;
    position: absolute;*/
    padding-left: 5px;
    padding-right: 5px;
    opacity: 1 !important; /* Prevent sync blinking */
    position: relative;
    left: -5px;
    display: inline-block; /* Unhides caret for some reason */
    margin-left: 5px;
    margin-right: -5px;
}
div.sd_text_block
{
    display: block;
    color: white;
    width: fit-content;
}
div.sd_button
{
    width: 150px;
    height: 30px;
    background-color: #004e00;
    display: flex;
    justify-content: center;
    align-items: center;
}
div.sd_row
{
    display: flex;
    align-items: center;
}
div.sd_chat
{
    display: block;
    bottom: 16px;
    position: fixed;
    width: 360px;
    padding: 8px;
    background-color: #00000080;
    color: white;
}
input[type=text].sd_chat
{
    background-color: transparent;
    width: 360px;
    margin: 0;
    user-select: text;
}
/*div.sd_button:hover
{
    background-color: #0e7e0e;
}
div.sd_button:active
{
    background-color: #042d04;
}*/

div.pending_blinking
{
    animation: 0.3s linear infinite alternate blinking_anim;
}
@keyframes blinking_anim {
    from { opacity: 0.25; }
    to { opacity: 0.5; }
}
.sd_scrollbar::-webkit-scrollbar, .ace_scrollbar::-webkit-scrollbar
{
    width: 12px;
    height: 12px;
    background-color: #000000;
}
.sd_scrollbar::-webkit-scrollbar-thumb, .ace_scrollbar::-webkit-scrollbar-thumb
{
    background-color: #453d58;
    box-shadow: inset 0 0 0px 4px #000000;
    border-radius: 6px;
}

.clr-field
{
    /*display: none !important;*/
    visibility: hidden;
    pointer-events: none;
}

settings_line, settings_line left, settings_line right settings_option
{
    font-family: ui_font2 !important;
    color: #ffffff;
    font-size: 1.2vw;
    box-sizing: border-box;
}
settings_line
{
    display: block;
    white-space: nowrap;
}
settings_line left
{
    width: 12vw;
    display: inline-block;
    text-align: right;
    vertical-align: top;

    padding-right: 1vw;
    padding-top: 0.15vw;
    padding-bottom: 0.15vw;
    background: rgba(20,20,20,0.35);
    border-radius: 4px;
    box-sizing: border-box;
}
settings_line right
{
    width: 47vw;
    display: inline-block;
    text-align: left;
    font-size: 0;
    vertical-align: top;
    white-space: normal;
    
    user-select: none;
}
settings_line right settings_option
{
    display: inline-block;
    padding: 0.5vw;
    padding-top: 0.1vw;
    padding-bottom: 0.1vw;
    margin-right: 0.5vw;
    color: #ffffff66;
    background: rgba(20,20,20,0.35);
    border-radius: 4px;
    position: relative;
    transition: color 0.2s ease;
}
settings_option.selected, settings_option:hover
{
    color: #ffffff;
}
settings_option::after,
    section a::after,
    section a:link::after
{
    display: block;
    width: 100%;
    height: 1px;
    top: 100%;
    background: #ffffff;
    transition: transform 0.2s ease;
    content: '';
    
    transform: scaleX( 0 );
}
/* ... */

